fixed spacing of hamburger links

--- a/style.css
+++ b/style.css
@@ -596,6 +596,7 @@
     display: flex;
     justify-content: center;
     background-color: white;
+    color: black;
   }
 
   .block h2 {
@@ -894,7 +895,6 @@
     margin-right: 20px;
     margin-top: 3vh;
     font-size: 2vh;
-    position: absolute;
   }
 
   #myLinks li a {
@@ -906,14 +906,6 @@
     color: #898989;
   }
 
-  #hamburger{
-    top: 130px;
-    background-color: black;
-  }
-
-  #hamburger2{
-    top: 170px;
-  }
 
   /*footer*/
 
